# libxslt-os2

./: Makefile.in  aclocal.m4  configure  configure.ac
doc/: Makefile.in
doc/EXSLT/devhelp/: Makefile.in
doc/devhelp/: Makefile.in
libexslt/: Makefile.in
libxslt/: Makefile.in
python/: Makefile.am  Makefile.in
python/tests/: Makefile.am  Makefile.in
tests/: Makefile.in
tests/XSLTMark/: Makefile.in
tests/docbook/: Makefile.in
tests/fuzz/: Makefile.in
tests/multiple/: Makefile.in
tests/xinclude/: Makefile.in
tests/xmlspec/: Makefile.in
xsltproc/: Makefile.in  xsltproc.c
